fixed spacing on preview cards

--- a/src/Store.css
+++ b/src/Store.css
@@ -49,11 +49,11 @@ h2.feat{
 
 
 .cards{
-    width: max(90px, 15vw);
+    width: 15vw;
     min-height: 30vh;
     border: 1px solid gray;
     border-radius: 15px;
-    padding: 1rem;
+    padding: 1vw;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -61,8 +61,8 @@ h2.feat{
 }
 
 .cardbtn{
-    margin: .3rem;
-    width: max(80px, 60%);
+    margin: .1rem;
+    width: 90%;
     padding: .3rem .1rem;
 }
 
@@ -115,7 +115,7 @@ input{
 
 .previewcard{
     width: 45vw;
-    padding: 15px 3rem;
+    padding: 15px max(15px, 3vw);
     border: 1px solid yellowgreen;
 }
 
@@ -130,6 +130,8 @@ h1#pokedex{
 
 .basics{
     padding: 1rem;
+    min-width: 150px;
+
 }
 
 .pokepreview{
@@ -137,7 +139,7 @@ h1#pokedex{
     border: 1px solid gray;
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 830px) {
     .store-header {
         max-width: 98vw;
     }
@@ -147,10 +149,17 @@ h1#pokedex{
     .search-section{
         width: 96vw;
     }
+    .cards{
+        width: 18vw;
+        padding: 3px;
+    }
+    .cardbtn{
+        padding: 1px;
+    }
     .searchbox{
-        width: 45vw;
+        width: 56vw;
     }
     .previewcard{
-        width: 51vw;
+        width: 40vw;
     }
 }
